--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Loan Delivery</title>
-    <link rel="stylesheet" href="/assets/styles/main.css" />
-    <script src="/app/libs/modernizr/modernizr.js"></script>
+    <link rel="stylesheet" href="/assets/styles/app.css" />
   </head>
   <body>
     <!-- App Regions -->
@@ -16,6 +15,6 @@
     <div id="dialog-region" class='reveal-modal' data-reveal><!-- Dialog Region --></div>
       
     <!-- Application source. -->
-    <script data-main="/app/app" src="/app/libs/requirejs/require.js"></script>
+    <script src="/app/libs/requirejs/require.js"></script>
   </body>
 </html>
