The base SPA now stands on its own two feet! On to the router

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,6 @@
     <div id="dialog-region" class='reveal-modal' data-reveal><!-- Dialog Region --></div>
       
     <!-- Application source. -->
-    <script src="/app/libs/requirejs/require.js"></script>
+    <script data-main="/app/main" src="/app/libs/requirejs/require.js"></script>
   </body>
 </html>
