--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,10 +11,10 @@
     <!-- App Regions -->
     <header id="header-region" data-role="header-region" class="app-row"></header>
     <main id="main-region" data-role="main-region" class='app-row'></main>
-    <footer><!-- footer region if we need one --></footer>
+    <footer id="footer-region" data-role="footer-region" class='app-row'></footer>
     <div id="dialog-region" class='reveal-modal' data-reveal><!-- Dialog Region --></div>
       
-    <!-- Application source. -->
+    <!-- Application source -->
     <script data-main="/app/main" src="/app/libs/requirejs/require.js"></script>
   </body>
 </html>
