--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,6 +14,6 @@
     <div id="dialog-region" class='reveal-modal' data-reveal><!-- Dialog Region --></div>
       
     <!-- Application source -->
-    <script data-main="init" src="/app/libs/requirejs/require.js"></script>
+    <script data-main="/init" src="/app/libs/requirejs/require.js"></script>
   </body>
 </html>
