Bug #12 complete. Very basic footer module

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,7 @@
     <!-- App Regions -->
     <header id="header-region" data-role="header-region" class="app-row"></header>
     <main id="main-region" data-role="main-region" class='app-row'></main>
+    <footer id="footer-region" data-role="footer-region" cass="app-row"></footer>
     <div id="dialog-region" class='reveal-modal' data-reveal><!-- Dialog Region --></div>
       
     <!-- Application source -->
