--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Loan Delivery</title>
+    <title></title>
     <link rel="stylesheet" href="/assets/styles/app.css" />
   </head>
   <body>
@@ -12,7 +12,7 @@
     <header id="header-region" data-role="header-region" class="app-row"></header>
     <main id="main-region" data-role="main-region" class='app-row'></main>
     <footer id="footer-region" data-role="footer-region" cass="app-row"></footer>
-    <div id="dialog-region" class='reveal-modal' data-reveal><!-- Dialog Region --></div>
+    <div id="dialog-region"></div>
       
     <!-- Application source -->
     <script data-main="/init" src="/app/libs/requirejs/require.js"></script>
